[tool.poetry]
name = "openad_tools"
version = "0.0.1"
description = "A common library of modules for OpenAD plugin development"
authors = [
  "Moenen Erbuer <moenen.erbuer@ibm.com>"
]
maintainers = [
  "Moenen Erbuer <moenen.erbuer@ibm.com>"
]
homepage = "https://www.accelerate.science/projects/openad"
documentation = "https://github.com/acceleratedscience/openad-tools"
repository = "https://github.com/acceleratedscience/openad-tools"
readme = "README.md"
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Typing :: Typed",
    "Programming Language :: Python :: 3.11"
]

[tool.black]
line-length=120

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
openad = ">=0.7.2"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
